--- a/content/publication/thesis/cite.bib
+++ b/content/publication/thesis/cite.bib
@@ -1,8 +1,14 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@phdthesis{adodo:tel-01899498,
+  TITLE = {{Altim{\'e}trie et radiom{\'e}trie en Antarctique}},
+  AUTHOR = {Adodo, Fifi Ibrahime},
+  URL = {https://theses.hal.science/tel-01899498},
+  NUMBER = {2018TOU30135},
+  SCHOOL = {{Universit{\'e} Paul Sabatier - Toulouse III}},
+  YEAR = {2018},
+  MONTH = Sep,
+  KEYWORDS = {Polar ice sheet ; Backscattering coefficent ; Polarization ratio ; Surface roughness ; Radar altimeter ; Radiometer ; Calotte polaire ; Antarctique ; Altim{\'e}trie radar ; Radiom{\'e}trie ; Coefficients de r{\'e}trodiffusion ; Ratio de polarisation de temp{\'e}rature de brillance ; Ugosit{\'e} de surface ; Physique de la mesure},
+  TYPE = {Theses},
+  PDF = {https://theses.hal.science/tel-01899498v2/file/2018TOU3135b.pdf},
+  HAL_ID = {tel-01899498},
+  HAL_VERSION = {v2},
 }
