--- a/content/publication/master_thesis/cite.bib
+++ b/content/publication/master_thesis/cite.bib
@@ -1,8 +1,11 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@phdthesis{
+  TITLE = {VARIATION TIDALE DE LA STRUCTURATION SEDIMENTAIRE DANS L'ESTUAIRE DE LA CUA LUC RIVER, VIETNAM},
+  AUTHOR = {Adodo, Fifi Ibrahime},
+  NUMBER = {M.Sc N°… /M.Sc/CIPMA/FAST/UAC/2014},
+  SCHOOL = {Université d’Abomey-Calavi (UAC), BENIN Faculté des Sciences et Techniques (FAST) Chaire Internationale en Physique Mathématique et Applications (CIPMA-Chaire UNESCO)},
+  YEAR = {2014},
+  MONTH = Sep,
+  KEYWORDS = {sédiments cohésifs, floculation /désagrégation, turbidité, turbulence, estuaire, baie d’Halong, Vietnam},
+  TYPE = {Theses},
+  PDF = {},
 }
