--- a/content/publication/egu_poster/cite.bib
+++ b/content/publication/egu_poster/cite.bib
@@ -1,8 +1,12 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@INPROCEEDINGS{2016EGUGA..18.5966A,
+       author = {{Adodo}, Fifi and {Picard}, Ghislain and {Remy}, Frederique},
+        title = "{Use of high frequency radiometer and altimeter on board AMSU-B, AMSR-E and Altika/SARAL for observations of the Antarctic ice sheet surface.}",
+    booktitle = {EGU General Assembly Conference Abstracts},
+         year = 2016,
+       series = {EGU General Assembly Conference Abstracts},
+        month = apr,
+          eid = {EPSC2016-5966},
+        pages = {EPSC2016-5966},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016EGUGA..18.5966A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
